force-app/main/default/objects/SDG_Goal__c/SDG_Goal__c.object-meta.xml
<CustomObject>
    <description>Sustainable Development Goals</description>
    <label>Goal</label>
    <nameField>
        <displayFormat>SDG{0000}</displayFormat>
        <label>Goal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>