force-app/main/default/objects/SDG_Goal__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Unique identifier code for the SDG</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the SDG code (e.g., 1, 2, 3).</inlineHelpText>
    <label>Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>