force-app/main/default/objects/SDG_Goal__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the SDG</description>
    <inlineHelpText>Provide a detailed description of the goal's objectives.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>