force-app/main/default/objects/SDG_Goal__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The official title of the SDG</description>
    <inlineHelpText>Enter the full title of the Sustainable Development Goal.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>