force-app/main/default/objects/SDG_Goal__c/fields/Total_Completed_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Outcomes__c</fullName>
    <description>Rollup count of completed outcomes</description>
    <inlineHelpText>Total Number of Completed, Exceeded or On Track Outcomes related to this goals</inlineHelpText>
    <label>Total Completed Outcomes</label>
    <summaryFilterItems>
        <field>SDG_Outcome__c.Status__c</field>
        <operation>equals</operation>
        <value>On Track, Completed, Exceeded</value>
    </summaryFilterItems>
    <summaryForeignKey>SDG_Outcome__c.Goal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>